lab1/src/yacc/y.output
Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: DeclList ClassDecl
    3         | ClassDecl

    4 VarDecl: Type ID SEMI
    5        | Type ID error SEMI

    6 Type: INT
    7     | BOOL
    8     | STRING
    9     | NamedType
   10     | ArrayType

   11 NamedType: CLASS ID

   12 ArrayType: Type LB RB

   13 FnDecl: Type ID LP Formals RP StmtBlock
   14       | VOID ID LP Formals RP StmtBlock
   15       | STATIC Type ID LP Formals RP StmtBlock
   16       | STATIC VOID ID LP Formals RP StmtBlock

   17 Formals: %empty
   18        | Variables

   19 Variables: Variables COMMA Type ID
   20          | Type ID

   21 ClassDecl: CLASS ID EXTENDS ID LC Fields RC
   22          | CLASS ID EXTENDS ID LC RC
   23          | CLASS ID LC Fields RC
   24          | CLASS ID LC RC

   25 Fields: Fields Field
   26       | Field

   27 Field: VarDecl
   28      | FnDecl

   29 StmtBlock: LC VarDecls Stmts RC
   30          | LC VarDecls RC
   31          | LC Stmts RC
   32          | LC RC

   33 VarDecls: VarDecls VarDecl
   34         | VarDecl

   35 Stmts: Stmts Stmt
   36      | Stmt

   37 Stmt: OptExpr SEMI
   38     | IfStmt
   39     | WhileStmt
   40     | ForStmt
   41     | BreakStmt
   42     | ReturnStmt
   43     | PrintStmt
   44     | StmtBlock

   45 IfStmt: IF LP Expr RP Stmt
   46       | IF LP Expr RP Stmt ELSE Stmt

   47 WhileStmt: WHILE LP Expr RP Stmt

   48 ForStmt: FOR LP OptExpr SEMI Expr SEMI OptExpr RP Stmt

   49 ReturnStmt: RETURN OptExpr SEMI

   50 BreakStmt: BREAK SEMI

   51 PrintStmt: PRINT LP Exprs RP SEMI

   52 Expr: AssignExpr
   53     | Constant
   54     | LValue
   55     | THIS
   56     | Call
   57     | LP Expr RP
   58     | ArithmeticExpr
   59     | RelationalExpr
   60     | LogicalExpr
   61     | READINTEGER LP RP
   62     | READLINE LP RP
   63     | INSTANCEOF LP Expr COMMA ID RP
   64     | NewExpr
   65     | NewArrayExpr

   66 NewExpr: NEW ID LP RP

   67 NewArrayExpr: NEWARRAY LP Type COMMA Expr RP

   68 AssignExpr: LValue ASSIGNOP Expr

   69 ArithmeticExpr: Expr PLUS Expr
   70               | Expr MINUS Expr
   71               | Expr STAR Expr
   72               | Expr DIV Expr
   73               | Expr MOD Expr
   74               | MINUS Expr

   75 RelationalExpr: Expr GREATER Expr
   76               | Expr LESS Expr
   77               | Expr GREATEREQUAL Expr
   78               | Expr LESSEQUAL Expr
   79               | Expr EQUAL Expr
   80               | Expr NOTEQUAL Expr

   81 LogicalExpr: Expr AND Expr
   82            | Expr OR Expr
   83            | NOT Expr

   84 Exprs: Exprs COMMA Expr
   85      | Expr

   86 OptExpr: Expr
   87        | %empty

   88 LValue: FieldAccess
   89       | ArrayAccess

   90 FieldAccess: ID
   91            | Expr DOT ID

   92 Call: ID LP Actuals RP
   93     | Expr DOT ID LP Actuals RP

   94 ArrayAccess: Expr LB Expr RB

   95 Actuals: Exprs
   96        | %empty

   97 Constant: INTCONSTANT
   98         | BOOLCONSTANT
   99         | STRINGCONSTANT
  100         | NULLCONSTANT


Terminals, with rules where they appear

$end (0) 0
error (256) 5
BOOL (258) 7
BREAK (259) 50
CLASS (260) 11 21 22 23 24
ELSE (261) 46
EXTENDS (262) 21 22
FOR (263) 48
IF (264) 45 46
INT (265) 6
NEW (266) 66
NEWARRAY (267) 67
RETURN (268) 49
STRING (269) 8
THIS (270) 55
VOID (271) 14 16
WHILE (272) 47
STATIC (273) 15 16
PRINT (274) 51
READINTEGER (275) 61
READLINE (276) 62
INSTANCEOF (277) 63
NULLCONSTANT (278) 100
BOOLCONSTANT (279) 98
INTCONSTANT (280) 97
STRINGCONSTANT (281) 99
ID (282) 4 5 11 13 14 15 16 19 20 21 22 23 24 63 66 90 91 92 93
SEMI (283) 4 5 37 48 49 50 51
COMMA (284) 19 63 67 84
LC (285) 21 22 23 24 29 30 31 32
RC (286) 21 22 23 24 29 30 31 32
LOWER_THAN_ELSE (287)
ASSIGNOP (288) 68
OR (289) 82
AND (290) 81
GREATER (291) 75
LESS (292) 76
GREATEREQUAL (293) 77
LESSEQUAL (294) 78
EQUAL (295) 79
NOTEQUAL (296) 80
PLUS (297) 69
MINUS (298) 70 74
STAR (299) 71
DIV (300) 72
MOD (301) 73
NOT (302) 83
UMINUS (303)
LP (304) 13 14 15 16 45 46 47 48 51 57 61 62 63 66 67 92 93
RP (305) 13 14 15 16 45 46 47 48 51 57 61 62 63 66 67 92 93
LB (306) 12 94
RB (307) 12 94
DOT (308) 91 93


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
Program (55)
    on left: 1, on right: 0
DeclList (56)
    on left: 2 3, on right: 1 2
VarDecl (57)
    on left: 4 5, on right: 27 33 34
Type (58)
    on left: 6 7 8 9 10, on right: 4 5 12 13 15 19 20 67
NamedType (59)
    on left: 11, on right: 9
ArrayType (60)
    on left: 12, on right: 10
FnDecl (61)
    on left: 13 14 15 16, on right: 28
Formals (62)
    on left: 17 18, on right: 13 14 15 16
Variables (63)
    on left: 19 20, on right: 18 19
ClassDecl (64)
    on left: 21 22 23 24, on right: 2 3
Fields (65)
    on left: 25 26, on right: 21 23 25
Field (66)
    on left: 27 28, on right: 25 26
StmtBlock (67)
    on left: 29 30 31 32, on right: 13 14 15 16 44
VarDecls (68)
    on left: 33 34, on right: 29 30 33
Stmts (69)
    on left: 35 36, on right: 29 31 35
Stmt (70)
    on left: 37 38 39 40 41 42 43 44, on right: 35 36 45 46 47 48
IfStmt (71)
    on left: 45 46, on right: 38
WhileStmt (72)
    on left: 47, on right: 39
ForStmt (73)
    on left: 48, on right: 40
ReturnStmt (74)
    on left: 49, on right: 42
BreakStmt (75)
    on left: 50, on right: 41
PrintStmt (76)
    on left: 51, on right: 43
Expr (77)
    on left: 52 53 54 55 56 57 58 59 60 61 62 63 64 65, on right: 45
    46 47 48 57 63 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82
    83 84 85 86 91 93 94
NewExpr (78)
    on left: 66, on right: 64
NewArrayExpr (79)
    on left: 67, on right: 65
AssignExpr (80)
    on left: 68, on right: 52
ArithmeticExpr (81)
    on left: 69 70 71 72 73 74, on right: 58
RelationalExpr (82)
    on left: 75 76 77 78 79 80, on right: 59
LogicalExpr (83)
    on left: 81 82 83, on right: 60
Exprs (84)
    on left: 84 85, on right: 51 84 95
OptExpr (85)
    on left: 86 87, on right: 37 48 49
LValue (86)
    on left: 88 89, on right: 54 68
FieldAccess (87)
    on left: 90 91, on right: 88
Call (88)
    on left: 92 93, on right: 56
ArrayAccess (89)
    on left: 94, on right: 89
Actuals (90)
    on left: 95 96, on right: 92 93
Constant (91)
    on left: 97 98 99 100, on right: 53


State 0

    0 $accept: . Program $end

    CLASS  shift, and go to state 1

    Program    go to state 2
    DeclList   go to state 3
    ClassDecl  go to state 4


State 1

   21 ClassDecl: CLASS . ID EXTENDS ID LC Fields RC
   22          | CLASS . ID EXTENDS ID LC RC
   23          | CLASS . ID LC Fields RC
   24          | CLASS . ID LC RC

    ID  shift, and go to state 5


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 6


State 3

    1 Program: DeclList .
    2 DeclList: DeclList . ClassDecl

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (Program)

    ClassDecl  go to state 7


State 4

    3 DeclList: ClassDecl .

    $default  reduce using rule 3 (DeclList)


State 5

   21 ClassDecl: CLASS ID . EXTENDS ID LC Fields RC
   22          | CLASS ID . EXTENDS ID LC RC
   23          | CLASS ID . LC Fields RC
   24          | CLASS ID . LC RC

    EXTENDS  shift, and go to state 8
    LC       shift, and go to state 9


State 6

    0 $accept: Program $end .

    $default  accept


State 7

    2 DeclList: DeclList ClassDecl .

    $default  reduce using rule 2 (DeclList)


State 8

   21 ClassDecl: CLASS ID EXTENDS . ID LC Fields RC
   22          | CLASS ID EXTENDS . ID LC RC

    ID  shift, and go to state 10


State 9

   23 ClassDecl: CLASS ID LC . Fields RC
   24          | CLASS ID LC . RC

    BOOL    shift, and go to state 11
    CLASS   shift, and go to state 12
    INT     shift, and go to state 13
    STRING  shift, and go to state 14
    VOID    shift, and go to state 15
    STATIC  shift, and go to state 16
    RC      shift, and go to state 17

    VarDecl    go to state 18
    Type       go to state 19
    NamedType  go to state 20
    ArrayType  go to state 21
    FnDecl     go to state 22
    Fields     go to state 23
    Field      go to state 24


State 10

   21 ClassDecl: CLASS ID EXTENDS ID . LC Fields RC
   22          | CLASS ID EXTENDS ID . LC RC

    LC  shift, and go to state 25


State 11

    7 Type: BOOL .

    $default  reduce using rule 7 (Type)


State 12

   11 NamedType: CLASS . ID

    ID  shift, and go to state 26


State 13

    6 Type: INT .

    $default  reduce using rule 6 (Type)


State 14

    8 Type: STRING .

    $default  reduce using rule 8 (Type)


State 15

   14 FnDecl: VOID . ID LP Formals RP StmtBlock

    ID  shift, and go to state 27


State 16

   15 FnDecl: STATIC . Type ID LP Formals RP StmtBlock
   16       | STATIC . VOID ID LP Formals RP StmtBlock

    BOOL    shift, and go to state 11
    CLASS   shift, and go to state 12
    INT     shift, and go to state 13
    STRING  shift, and go to state 14
    VOID    shift, and go to state 28

    Type       go to state 29
    NamedType  go to state 20
    ArrayType  go to state 21


State 17

   24 ClassDecl: CLASS ID LC RC .

    $default  reduce using rule 24 (ClassDecl)


State 18

   27 Field: VarDecl .

    $default  reduce using rule 27 (Field)


State 19

    4 VarDecl: Type . ID SEMI
    5        | Type . ID error SEMI
   12 ArrayType: Type . LB RB
   13 FnDecl: Type . ID LP Formals RP StmtBlock

    ID  shift, and go to state 30
    LB  shift, and go to state 31


State 20

    9 Type: NamedType .

    $default  reduce using rule 9 (Type)


State 21

   10 Type: ArrayType .

    $default  reduce using rule 10 (Type)


State 22

   28 Field: FnDecl .

    $default  reduce using rule 28 (Field)


State 23

   23 ClassDecl: CLASS ID LC Fields . RC
   25 Fields: Fields . Field

    BOOL    shift, and go to state 11
    CLASS   shift, and go to state 12
    INT     shift, and go to state 13
    STRING  shift, and go to state 14
    VOID    shift, and go to state 15
    STATIC  shift, and go to state 16
    RC      shift, and go to state 32

    VarDecl    go to state 18
    Type       go to state 19
    NamedType  go to state 20
    ArrayType  go to state 21
    FnDecl     go to state 22
    Field      go to state 33


State 24

   26 Fields: Field .

    $default  reduce using rule 26 (Fields)


State 25

   21 ClassDecl: CLASS ID EXTENDS ID LC . Fields RC
   22          | CLASS ID EXTENDS ID LC . RC

    BOOL    shift, and go to state 11
    CLASS   shift, and go to state 12
    INT     shift, and go to state 13
    STRING  shift, and go to state 14
    VOID    shift, and go to state 15
    STATIC  shift, and go to state 16
    RC      shift, and go to state 34

    VarDecl    go to state 18
    Type       go to state 19
    NamedType  go to state 20
    ArrayType  go to state 21
    FnDecl     go to state 22
    Fields     go to state 35
    Field      go to state 24


State 26

   11 NamedType: CLASS ID .

    $default  reduce using rule 11 (NamedType)


State 27

   14 FnDecl: VOID ID . LP Formals RP StmtBlock

    LP  shift, and go to state 36


State 28

   16 FnDecl: STATIC VOID . ID LP Formals RP StmtBlock

    ID  shift, and go to state 37


State 29

   12 ArrayType: Type . LB RB
   15 FnDecl: STATIC Type . ID LP Formals RP StmtBlock

    ID  shift, and go to state 38
    LB  shift, and go to state 31


State 30

    4 VarDecl: Type ID . SEMI
    5        | Type ID . error SEMI
   13 FnDecl: Type ID . LP Formals RP StmtBlock

    error  shift, and go to state 39
    SEMI   shift, and go to state 40
    LP     shift, and go to state 41


State 31

   12 ArrayType: Type LB . RB

    RB  shift, and go to state 42


State 32

   23 ClassDecl: CLASS ID LC Fields RC .

    $default  reduce using rule 23 (ClassDecl)


State 33

   25 Fields: Fields Field .

    $default  reduce using rule 25 (Fields)


State 34

   22 ClassDecl: CLASS ID EXTENDS ID LC RC .

    $default  reduce using rule 22 (ClassDecl)


State 35

   21 ClassDecl: CLASS ID EXTENDS ID LC Fields . RC
   25 Fields: Fields . Field

    BOOL    shift, and go to state 11
    CLASS   shift, and go to state 12
    INT     shift, and go to state 13
    STRING  shift, and go to state 14
    VOID    shift, and go to state 15
    STATIC  shift, and go to state 16
    RC      shift, and go to state 43

    VarDecl    go to state 18
    Type       go to state 19
    NamedType  go to state 20
    ArrayType  go to state 21
    FnDecl     go to state 22
    Field      go to state 33


State 36

   14 FnDecl: VOID ID LP . Formals RP StmtBlock

    BOOL    shift, and go to state 11
    CLASS   shift, and go to state 12
    INT     shift, and go to state 13
    STRING  shift, and go to state 14

    $default  reduce using rule 17 (Formals)

    Type       go to state 44
    NamedType  go to state 20
    ArrayType  go to state 21
    Formals    go to state 45
    Variables  go to state 46


State 37

   16 FnDecl: STATIC VOID ID . LP Formals RP StmtBlock

    LP  shift, and go to state 47


State 38

   15 FnDecl: STATIC Type ID . LP Formals RP StmtBlock

    LP  shift, and go to state 48


State 39

    5 VarDecl: Type ID error . SEMI

    SEMI  shift, and go to state 49


State 40

    4 VarDecl: Type ID SEMI .

    $default  reduce using rule 4 (VarDecl)


State 41

   13 FnDecl: Type ID LP . Formals RP StmtBlock

    BOOL    shift, and go to state 11
    CLASS   shift, and go to state 12
    INT     shift, and go to state 13
    STRING  shift, and go to state 14

    $default  reduce using rule 17 (Formals)

    Type       go to state 44
    NamedType  go to state 20
    ArrayType  go to state 21
    Formals    go to state 50
    Variables  go to state 46


State 42

   12 ArrayType: Type LB RB .

    $default  reduce using rule 12 (ArrayType)


State 43

   21 ClassDecl: CLASS ID EXTENDS ID LC Fields RC .

    $default  reduce using rule 21 (ClassDecl)


State 44

   12 ArrayType: Type . LB RB
   20 Variables: Type . ID

    ID  shift, and go to state 51
    LB  shift, and go to state 31


State 45

   14 FnDecl: VOID ID LP Formals . RP StmtBlock

    RP  shift, and go to state 52


State 46

   18 Formals: Variables .
   19 Variables: Variables . COMMA Type ID

    COMMA  shift, and go to state 53

    $default  reduce using rule 18 (Formals)


State 47

   16 FnDecl: STATIC VOID ID LP . Formals RP StmtBlock

    BOOL    shift, and go to state 11
    CLASS   shift, and go to state 12
    INT     shift, and go to state 13
    STRING  shift, and go to state 14

    $default  reduce using rule 17 (Formals)

    Type       go to state 44
    NamedType  go to state 20
    ArrayType  go to state 21
    Formals    go to state 54
    Variables  go to state 46


State 48

   15 FnDecl: STATIC Type ID LP . Formals RP StmtBlock

    BOOL    shift, and go to state 11
    CLASS   shift, and go to state 12
    INT     shift, and go to state 13
    STRING  shift, and go to state 14

    $default  reduce using rule 17 (Formals)

    Type       go to state 44
    NamedType  go to state 20
    ArrayType  go to state 21
    Formals    go to state 55
    Variables  go to state 46


State 49

    5 VarDecl: Type ID error SEMI .

    $default  reduce using rule 5 (VarDecl)


State 50

   13 FnDecl: Type ID LP Formals . RP StmtBlock

    RP  shift, and go to state 56


State 51

   20 Variables: Type ID .

    $default  reduce using rule 20 (Variables)


State 52

   14 FnDecl: VOID ID LP Formals RP . StmtBlock

    LC  shift, and go to state 57

    StmtBlock  go to state 58


State 53

   19 Variables: Variables COMMA . Type ID

    BOOL    shift, and go to state 11
    CLASS   shift, and go to state 12
    INT     shift, and go to state 13
    STRING  shift, and go to state 14

    Type       go to state 59
    NamedType  go to state 20
    ArrayType  go to state 21


State 54

   16 FnDecl: STATIC VOID ID LP Formals . RP StmtBlock

    RP  shift, and go to state 60


State 55

   15 FnDecl: STATIC Type ID LP Formals . RP StmtBlock

    RP  shift, and go to state 61


State 56

   13 FnDecl: Type ID LP Formals RP . StmtBlock

    LC  shift, and go to state 57

    StmtBlock  go to state 62


State 57

   29 StmtBlock: LC . VarDecls Stmts RC
   30          | LC . VarDecls RC
   31          | LC . Stmts RC
   32          | LC . RC

    BOOL            shift, and go to state 11
    BREAK           shift, and go to state 63
    CLASS           shift, and go to state 12
    FOR             shift, and go to state 64
    IF              shift, and go to state 65
    INT             shift, and go to state 13
    NEW             shift, and go to state 66
    NEWARRAY        shift, and go to state 67
    RETURN          shift, and go to state 68
    STRING          shift, and go to state 14
    THIS            shift, and go to state 69
    WHILE           shift, and go to state 70
    PRINT           shift, and go to state 71
    READINTEGER     shift, and go to state 72
    READLINE        shift, and go to state 73
    INSTANCEOF      shift, and go to state 74
    NULLCONSTANT    shift, and go to state 75
    BOOLCONSTANT    shift, and go to state 76
    INTCONSTANT     shift, and go to state 77
    STRINGCONSTANT  shift, and go to state 78
    ID              shift, and go to state 79
    LC              shift, and go to state 57
    RC              shift, and go to state 80
    MINUS           shift, and go to state 81
    NOT             shift, and go to state 82
    LP              shift, and go to state 83

    $default  reduce using rule 87 (OptExpr)

    VarDecl         go to state 84
    Type            go to state 85
    NamedType       go to state 20
    ArrayType       go to state 21
    StmtBlock       go to state 86
    VarDecls        go to state 87
    Stmts           go to state 88
    Stmt            go to state 89
    IfStmt          go to state 90
    WhileStmt       go to state 91
    ForStmt         go to state 92
    ReturnStmt      go to state 93
    BreakStmt       go to state 94
    PrintStmt       go to state 95
    Expr            go to state 96
    NewExpr         go to state 97
    NewArrayExpr    go to state 98
    AssignExpr      go to state 99
    ArithmeticExpr  go to state 100
    RelationalExpr  go to state 101
    LogicalExpr     go to state 102
    OptExpr         go to state 103
    LValue          go to state 104
    FieldAccess     go to state 105
    Call            go to state 106
    ArrayAccess     go to state 107
    Constant        go to state 108


State 58

   14 FnDecl: VOID ID LP Formals RP StmtBlock .

    $default  reduce using rule 14 (FnDecl)


State 59

   12 ArrayType: Type . LB RB
   19 Variables: Variables COMMA Type . ID

    ID  shift, and go to state 109
    LB  shift, and go to state 31


State 60

   16 FnDecl: STATIC VOID ID LP Formals RP . StmtBlock

    LC  shift, and go to state 57

    StmtBlock  go to state 110


State 61

   15 FnDecl: STATIC Type ID LP Formals RP . StmtBlock

    LC  shift, and go to state 57

    StmtBlock  go to state 111

